[package]
name = "aarch64-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
aarch64-cpu = "9.3"
bitfield-struct = { version = "0.4", default-features = false }
tock-registers = { version = "0.8", default-features = false }
zerocopy = { version = "0.6", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
